@@ -1,3 +1,4 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^.travis.yml$
 ^docs
