@@ -3,7 +3,7 @@
 \newcommand{\ghpr}{\href{https://github.com/eddelbuettel/linl/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/eddelbuettel/linl/issues/#1}{##1}}
 
-\section{Changes in tint version 0.0.1 (2017-10-15)}{
+\section{Changes in tint version 0.0.1 (2017-10-17)}{
   \itemize{
     \item Initial CRAN release
   }
